# autoforge

./: .autoforge.toml  .gitignore  .gitmodules  CLAUDE.md  README.md  failures.tsv  program.md  pyproject.toml  results.tsv
autoforge/: campaign.py  config.py  git_utils.py  pointer.py
config/: campaign.toml  campaign.toml.example  nodes.yaml.example  runner.toml.example  test_run.yaml.example
docs/: agent.md  plugin-sdk.md  runner.md  sprint-migration.md
projects/: __init__.py
requests/: 0001_2026-03-23T21-40-00.json  0001_2026-03-24_20-58-53.264096+00-00.json  0001_2026-03-24_20-59-33.208939+00-00.json  0001_2026-03-24_22-46-40.742122+00-00.json  0002_2026-03-23T22-00-00.json  0002_2026-03-24_21-07-47.540053+00-00.json  0002_2026-03-24_23-59-10.077797+00-00.json  0003_2026-03-23T23-00-00.json  0003_2026-03-24_21-13-05.000531+00-00.json  0003_2026-03-25_00-49-10.626681+00-00.json  0004_2026-03-23T23-30-00.json  0004_2026-03-24_21-16-54.645470+00-00.json  0004_2026-03-25_01-11-21.767717+00-00.json  0005_2026-03-24_21-22-14.672527+00-00.json  0005_2026-03-25_01-15-05.415951+00-00.json  0006_2026-03-23T23-50-00.json  0006_2026-03-25_01-18-10.281635+00-00.json  0007_2026-03-24T00-00-00.json  0007_2026-03-25_01-23-06.352377+00-00.json  0008_2026-03-25_01-28-24.391182+00-00.json  0009_2026-03-25_01-33-10.477721+00-00.json  0010_2026-03-25_01-35-35.280771+00-00.json  0011_2026-03-25_01-37-20.119090+00-00.json  0012_2026-03-25_01-41-25.597162+00-00.json  (+31 more)
src/runner/: __init__.py  build.py  execute.py  protocol.py  pyproject.toml  service.py  testpmd.py
(+269 files in other folders)
