[project]
name = "autosearch-dpdk"
version = "0.1.0"
description = "Iterative DPDK optimization via two-system architecture"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.52.0",
    "pyelftools>=0.31",
]

[project.scripts]
autosearch = "src.agent.loop:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
]
