[project]
name = "autosearch-runner"
version = "0.1.0"
description = "Runner service for autosearch-dpdk test execution"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
autosearch-runner = "src.runner.service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
